--- a/chirp-backend/node-api/.env
+++ b/chirp-backend/node-api/.env
@@ -1,11 +1,11 @@
 # Database
-DATABASE_URL="postgresql://postgres:Thunderheart451!@localhost:5433/chirp_db?schema=public"
+DATABASE_URL="postgresql://postgres:Thunderheart451!@localhost:5432/chirp_db?schema=public"
 
 # Redis
 REDIS_URL="redis://localhost:6379"
 
 # S3 Storage
-S3_BUCKET="chirp-media"
+S3_BUCKET="chirp-path"
 S3_REGION="us-east-1"
 S3_ACCESS_KEY="minioadmin"
 S3_SECRET_KEY="minioadmin"
