--- a/chirp-backend/node-api/Dockerfile
+++ b/chirp-backend/node-api/Dockerfile
@@ -14,7 +14,7 @@ RUN apk add --no-cache \
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN npm ci 
 
 # Copy application code
 COPY . .
@@ -25,6 +25,8 @@ RUN npx prisma generate
 # Build TypeScript
 RUN npm run build
 
+#Remove dev dependencies after build 
+RUN npm prune --production
 # Create logs directory
 RUN mkdir -p logs
 
