--- a/chirp-backend/python-ai/Dockerfile
+++ b/chirp-backend/python-ai/Dockerfile
@@ -36,3 +36,9 @@ HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
 
 # Run the application
 CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+# For production (current setup)
+RUN pip install --no-cache-dir -r requirements.txt
+
+# For development (if needed)
+RUN pip install --no-cache-dir -r requirements.txt -r requirements-dev.txt
