--- a/chirp-backend/node-api/package.json
+++ b/chirp-backend/node-api/package.json
@@ -4,8 +4,8 @@
   "description": "Chirp backend API for conversation training app",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "dev": "ts-node src/index.ts",
+    "build": "npx tsc",
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -59,6 +59,7 @@
     "@types/jest": "^29.5.8",
     "@types/supertest": "^6.0.2",
     "typescript": "^5.3.3",
+    "ts-node": "^10.9.1",
     "tsx": "^4.6.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
